# practicepackage

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml
practicepackage/: maths.py
tests/: test_maths.py  test_practicepackage.py
