[tool.poetry]
name = "practicepackage"
version = "0.1.0"
description = ""
authors = ["Joe Farrington <farrington.joe@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/joefarrington/practicepackage"
repository = "https://github.com/joefarrington/practicepackage" 

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
